--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "next-ga",
-    "version": "2.3.4-ifg",
+    "version": "2.3.4-ifg-1",
     "main": "index.js",
     "repository": "https://github.com/sergiodxa/next-ga.git",
     "author": "Sergio Xalambrí <sergiodxa@gmail.com> (https://sergiodxa.com)",
